fixed gap in nav

--- a/nav.css
+++ b/nav.css
@@ -87,7 +87,7 @@ a {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 6.5rem;
+    top: 6.45rem;
     flex-direction: column;
     background-color: white;
     width: 100%;
